--- a/portfolio.html
+++ b/portfolio.html
@@ -71,57 +71,57 @@
                             </div>
                         </a></li>
 
-                    <li class="portfolio-item-list"><a href="" class="link"><img src="image/portfolio/img1.jpg"
-                                alt="Играют баскетбол" width="370">
+                    <li class="portfolio-item-list"><a href="" class="portfolio-link link"><img
+                                src="image/portfolio/img1.jpg" alt="Играют баскетбол" width="370">
                             <div class="item-border">
                                 <h2 class="portfolio-title"> Постер New Orlean vs Golden Star</h2>
                                 <p class="portfolio-text"> Дизайн</p>
                             </div>
                         </a></li>
-                    <li class="portfolio-item-list"><a href="" class="link"><img src="image/portfolio/img2.jpg"
-                                alt="Листовка" width="370">
+                    <li class="portfolio-item-list"><a href="" class="portfolio-link link"><img
+                                src="image/portfolio/img2.jpg" alt="Листовка" width="370">
                             <div class="item-border">
                                 <h2 class="portfolio-title">Ресторан Seafood</h2>
                                 <p class="portfolio-text"> Приложение</p>
                             </div>
                         </a></li>
-                    <li class="portfolio-item-list"><a href="" class="link"><img src="image/portfolio/img3.jpg"
-                                alt="Наушники" width="370">
+                    <li class="portfolio-item-list"><a href="" class="portfolio-link link"><img
+                                src="image/portfolio/img3.jpg" alt="Наушники" width="370">
                             <div class="item-border">
                                 <h2 class="portfolio-title">Проект Prime</h2>
                                 <p class="portfolio-text">Маркетинг</p>
                             </div>
                         </a></li>
-                    <li class="portfolio-item-list"><a href="" class="link"><img src="image/portfolio/img4.jpg"
-                                alt="Коробки" width="370">
+                    <li class="portfolio-item-list"><a href="" class="portfolio-link link"><img
+                                src="image/portfolio/img4.jpg" alt="Коробки" width="370">
                             <div class="item-border">
                                 <h2 class="portfolio-title">Проект Boxes</h2>
                                 <p class="portfolio-text">Приложение</p>
                             </div>
                         </a></li>
-                    <li class="portfolio-item-list"><a href="" class="link"><img src="image/portfolio/img5.jpg"
-                                alt="Монитор" width="370">
+                    <li class="portfolio-item-list"><a href="" class="portfolio-link link"><img
+                                src="image/portfolio/img5.jpg" alt="Монитор" width="370">
                             <div class="item-border">
                                 <h2 class="portfolio-title">Inspiration has no Borders</h2>
                                 <p class="portfolio-text">Веб-сайт</p>
                             </div>
                         </a></li>
-                    <li class="portfolio-item-list"><a href="" class="link"><img src="image/portfolio/img6.jpg"
-                                alt="Книга" width="370">
+                    <li class="portfolio-item-list"><a href="" class="portfolio-link link"><img
+                                src="image/portfolio/img6.jpg" alt="Книга" width="370">
                             <div class="item-border">
                                 <h2 class="portfolio-title"> Издание Limited Edition</h2>
                                 <p class="portfolio-text">Дизайн</p>
                             </div>
                         </a></li>
-                    <li class="portfolio-item-list"><a href="" class="link"><img src="image/portfolio/img7.jpg"
-                                alt="Лейба" width="370">
+                    <li class="portfolio-item-list"><a href="" class="portfolio-link link"><img
+                                src="image/portfolio/img7.jpg" alt="Лейба" width="370">
                             <div class="item-border">
                                 <h2 class="portfolio-title">Проект LAB</h2>
                                 <p class="portfolio-text">Маркетинг</p>
                             </div>
                         </a></li>
-                    <li class="portfolio-item-list"><a href="" class="link"><img src="image/portfolio/img8.jpg"
-                                alt="Ноут" width="370">
+                    <li class="portfolio-item-list"><a href="" class="portfolio-link link"><img
+                                src="image/portfolio/img8.jpg" alt="Ноут" width="370">
                             <div class="item-border">
                                 <h2 class="portfolio-title">Growing Business</h2>
                                 <p class="portfolio-text">Приложение</p>
