--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
                     <span class="logo-web"> Web</span>Studio</a>
                 <ul class="header-list list">
                     <li class="header-item"><a href="index.html" class="header-link link">Студия</a></li>
-                    <li class="header-item"><a href="./portfolio.html" class="header-link link">Портфолио</a></li>
+                    <li class="header-item"><a href="./portfolio.html" class="header-link line link">Портфолио</a></li>
                     <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
                 </ul>
             </nav>
@@ -63,65 +63,118 @@
                             class="portfolio-btn btn">Маркетинг</button></li>
                 </ul>
                 <ul class="portfolio-list list">
-                    <li class="portfolio-item-list"><a href="" class="link"><img src="image/portfolio/img.jpg"
-                                alt="Люди в экране" class="portfolio-img" width="370">
+                    <li class="portfolio-item-list"><a href="" class="portfolio-link link">
+                            <div class="portfolio-up-space"><img src="image/portfolio/img.jpg" alt="Люди в экране"
+                                    class="portfolio-img" width="370">
+                                <p class="portfolio-up-text">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                                    Все это позволит
+                                    посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="item-border">
                                 <h2 class="portfolio-title">Технокряк</h2>
                                 <p class="portfolio-text">Веб-сайт</p>
                             </div>
                         </a></li>
 
-                    <li class="portfolio-item-list"><a href="" class="portfolio-link link"><img
-                                src="image/portfolio/img1.jpg" alt="Играют баскетбол" width="370">
+                    <li class="portfolio-item-list"><a href="" class="portfolio-link link">
+                            <div class="portfolio-up-space"><img src="image/portfolio/img1.jpg" alt="Играют баскетбол"
+                                    width="370">
+                                <p class="portfolio-up-text">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                                    Все это позволит
+                                    посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="item-border">
                                 <h2 class="portfolio-title"> Постер New Orlean vs Golden Star</h2>
                                 <p class="portfolio-text"> Дизайн</p>
                             </div>
                         </a></li>
-                    <li class="portfolio-item-list"><a href="" class="portfolio-link link"><img
-                                src="image/portfolio/img2.jpg" alt="Листовка" width="370">
+                    <li class="portfolio-item-list"><a href="" class="portfolio-link link">
+                            <div class="portfolio-up-space"><img src="image/portfolio/img2.jpg" alt="Листовка"
+                                    width="370">
+                                <p class="portfolio-up-text">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                                    Все это позволит
+                                    посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="item-border">
                                 <h2 class="portfolio-title">Ресторан Seafood</h2>
                                 <p class="portfolio-text"> Приложение</p>
                             </div>
                         </a></li>
-                    <li class="portfolio-item-list"><a href="" class="portfolio-link link"><img
-                                src="image/portfolio/img3.jpg" alt="Наушники" width="370">
+                    <li class="portfolio-item-list"><a href="" class="portfolio-link link">
+                            <div class="portfolio-up-space"><img src="image/portfolio/img3.jpg" alt="Наушники"
+                                    width="370">
+                                <p class="portfolio-up-text">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                                    Все это позволит
+                                    посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="item-border">
                                 <h2 class="portfolio-title">Проект Prime</h2>
                                 <p class="portfolio-text">Маркетинг</p>
                             </div>
                         </a></li>
-                    <li class="portfolio-item-list"><a href="" class="portfolio-link link"><img
-                                src="image/portfolio/img4.jpg" alt="Коробки" width="370">
+                    <li class="portfolio-item-list">
+                        <a href="" class="portfolio-link link">
+                            <div class="portfolio-up-space"><img src="image/portfolio/img4.jpg" alt="Коробки"
+                                    width="370">
+                                <p class="portfolio-up-text">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                                    Все это позволит
+                                    посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="item-border">
                                 <h2 class="portfolio-title">Проект Boxes</h2>
                                 <p class="portfolio-text">Приложение</p>
                             </div>
-                        </a></li>
-                    <li class="portfolio-item-list"><a href="" class="portfolio-link link"><img
-                                src="image/portfolio/img5.jpg" alt="Монитор" width="370">
+                        </a>
+                    </li>
+                    <li class="portfolio-item-list"><a href="" class="portfolio-link link">
+                            <div class="portfolio-up-space"><img src="image/portfolio/img5.jpg" alt="Монитор"
+                                    width="370">
+                                <p class="portfolio-up-text">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                                    Все это позволит
+                                    посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="item-border">
                                 <h2 class="portfolio-title">Inspiration has no Borders</h2>
                                 <p class="portfolio-text">Веб-сайт</p>
                             </div>
                         </a></li>
-                    <li class="portfolio-item-list"><a href="" class="portfolio-link link"><img
-                                src="image/portfolio/img6.jpg" alt="Книга" width="370">
+                    <li class="portfolio-item-list"><a href="" class="portfolio-link link">
+                            <div class="portfolio-up-space"><img src="image/portfolio/img6.jpg" alt="Книга" width="370">
+                                <p class="portfolio-up-text">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                                    Все это позволит
+                                    посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="item-border">
                                 <h2 class="portfolio-title"> Издание Limited Edition</h2>
                                 <p class="portfolio-text">Дизайн</p>
                             </div>
                         </a></li>
-                    <li class="portfolio-item-list"><a href="" class="portfolio-link link"><img
-                                src="image/portfolio/img7.jpg" alt="Лейба" width="370">
+                    <li class="portfolio-item-list"><a href="" class="portfolio-link link">
+                            <div class="portfolio-up-space"><img src="image/portfolio/img7.jpg" alt="Лейба" width="370">
+                                <p class="portfolio-up-text">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                                    Все это позволит
+                                    посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="item-border">
                                 <h2 class="portfolio-title">Проект LAB</h2>
                                 <p class="portfolio-text">Маркетинг</p>
                             </div>
                         </a></li>
-                    <li class="portfolio-item-list"><a href="" class="portfolio-link link"><img
-                                src="image/portfolio/img8.jpg" alt="Ноут" width="370">
+                    <li class="portfolio-item-list"><a href="" class="portfolio-link link">
+                            <div class="portfolio-up-space"><img src="image/portfolio/img8.jpg" alt="Ноут" width="370">
+                                <p class="portfolio-up-text">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                                    Все это позволит
+                                    посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="item-border">
                                 <h2 class="portfolio-title">Growing Business</h2>
                                 <p class="portfolio-text">Приложение</p>
